--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -173,7 +173,7 @@
                 </div>
             </div>
 
-            <p class="cp">Copyright ©2012-2013 smeite.com, All Rights Reserved. <a href="http://www.miitbeian.gov.cn/">津ICP备12008177号-1</a></p>
+            <p class="cp">Copyright ©2012-2013 smeite.com, All Rights Reserved. <a href="http://www.miitbeian.gov.cn/">浙ICP备13018996号</a></p>
         </div>
 
     <a id="returnTop" href="javascript:;">回到顶部</a>
