--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -219,8 +219,10 @@
 <!--[if lt IE 9]>
 <script src="/assets/js/html5.js" type="text/javascript"></script>
 <![endif]-->
-<script type="text/javascript" src="/assets/js/front/seajs/2.0/sea.js?v=2013052601" data-config="/assets/js/front/app/config.js" id="seajsnode"></script>
+    <script type="text/javascript" src="/assets/js/sea-modules/seajs/seajs/2.1.0/sea.js"></script>
+<script type="text/javascript" src="/assets/js/sea-modules/seajs/seajs-style/1.0.0/seajs-style.js"></script>
 
+<script type="text/javascript" src="/assets/js/sea-modules/seajs-config.js"></script>
 @js
 
 <div class="baidu">
