--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -332,42 +332,7 @@ nav="index"
 <!-- end -->
 <!--推荐品牌-->
 
-<div class="brands">
-    <div class="tabs hd clearfix">
-        <h3> 美食品牌  <span class="vline">|</span></h3>
-        <h3> 居家品牌</h3>
-    </div>
-    <div class="panes">
-    <ul class="brand-list clearfix">
-        @for((advert,i)<- meishiBrands.view.zipWithIndex) {
-        @if(((i+1)%9==0)){
-        <li class="last-item">
-            <a  href="@advert.link" title="@advert.title" target="_blank"><img src="@advert.pic" alt="@advert.title" width="100" height="60"></a>
-        </li>
-        }else {
-        <li>
-            <a  href="@advert.link" title="@advert.title" target="_blank"><img src="@advert.pic" alt="@advert.title" width="100" height="60"></a>
-        </li>
-        }
-        }
 
-    </ul>
-    <ul class="brand-list clearfix">
-        @for((advert,i)<- teseBrands.view.zipWithIndex) {
-        @if(((i+1)%9==0)){
-        <li class="last-item">
-            <a  href="@advert.link" title="@advert.title" target="_blank"><img src="@advert.pic" alt="@advert.title" width="100" height="60"></a>
-        </li>
-        }else {
-        <li>
-            <a  href="@advert.link" title="@advert.title" target="_blank"><img src="@advert.pic" alt="@advert.title" width="100" height="60"></a>
-        </li>
-        }
-        }
-
-    </ul>
-    </div>
-</div>
 
 <!--推荐品牌 end-->
 
@@ -396,9 +361,7 @@ nav="index"
 
 }{
 <script type="text/javascript">
-    seajs.use('app/init', function (init) {
-        init.load('app/index');
-    });
+    seajs.use("/assets/js/sea-modules/smeite/index.js")
 </script>
 }
 
