adjust site and post style

--- a/app/views/baobei/view.scala.html
+++ b/app/views/baobei/view.scala.html
@@ -171,6 +171,6 @@ description = goods.intro
         }{
 
 <script type="text/javascript">
-    seajs.use(['smeite/goods/goods','smeite/goods/favor'])
+    seajs.use(['smeite/baobei/baobei','smeite/baobei/favor'])
 </script>
 }
