--- a/public/assets/js/ueditor/themes/default/css/ueditor.css
+++ b/public/assets/js/ueditor/themes/default/css/ueditor.css
@@ -121,7 +121,7 @@ div.edui-box {
 }
 
 .edui-default .edui-editor {
-    border: 1px solid #ddd;
+    /*border: 1px solid #ddd;*/
     background-color: white;
     position: relative;
     overflow: visible;
