--- a/public/assets/css/template/siteEdit.css
+++ b/public/assets/css/template/siteEdit.css
@@ -29,7 +29,7 @@
 }
 .col-left{
     float:left;
-    width: 520px;
+    width: 540px;
 }
 .fm-item {
     float: left
@@ -48,9 +48,7 @@
     width: 360px ;
     padding: 2px 12px;
 }
-.fm-item .big{
-    width: 580px;
-}
+
 .intro-txa {
     height: 150px
 }
@@ -224,4 +222,54 @@ text-decoration: none;
 
 .photo-dialog form {
     margin-left: 40px
+}
+
+.post-edit-left{
+    margin-top: 30px;
+    background-color: #fff;
+    width: 660px;
+    margin-right: 30px;
+    float: left;
+}
+
+.post-edit-left .post-edit-meta{
+    background-color: #f1fbf0;
+    padding: 20px 30px 0 30px;
+}
+.post-edit-meta .form-row{
+    margin-bottom: 5px;
+}
+.post-edit-left .post-edit-content{
+      background-color: #fff;
+}
+
+.post-edit-left h2{
+    padding: 20px;
+    font-size: 18px;
+    line-height: 1.2;
+}
+.post-edit-left .post-tags{
+    margin-bottom: 0;
+}
+.post-edit-left .submit{
+    float: right;
+    margin-right: 20px;
+}
+
+.post-edit-right{
+    width: 290px;
+    float: left;
+}
+.post-edit-right .post-intro{
+    background-color: #fff;
+    margin-top: 30px;
+    padding: 20px;
+    border-top: 4px solid #000;
+    border-right: 1px solid #eee;
+    border-left: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+}
+.post-edit-right .post-intro  .bd {
+    color: #aaa;
+    margin-top: 20px;
 }
