--- a/public/assets/css/template/sitePost.css
+++ b/public/assets/css/template/sitePost.css
@@ -116,6 +116,7 @@
  /*post left end*/
 
 .post .post-main{
+    position: relative;
     float: left;
     width: 540px;
     background-color: #fff;
@@ -124,9 +125,33 @@
     margin-right: 20px;
 }
 
-.post-main .post-title{
+.post-main .post-title-bar{
     margin-bottom: 15px;
-    font-size: 22px;
+    position: relative;
+}
+.post-title-bar .post-title{
+   position: relative;
+    padding-top: 5px;
+}
+.post-title-bar .post-title h3{
+    font-size: 18px;
+}
+.post-title-bar .post-relate li{
+    float: left;
+    color: #999;
+    height: 22px;
+    line-height: 22px;
+}
+.post-title-bar .post-relate li.blank{
+    margin: 0 10px;
+    color: #e1e1e1;
+}
+.post-title-bar .post-relate{
+    padding-top: 5px;
+}
+.post-title-bar .like-common{
+    top:0;
+    right:0;
 }
 .post .menu {
 
@@ -146,7 +171,9 @@
     line-height: 18px;
     display: block;
     height: 18px;
+
 }
+
 .post .menu li a.big {
     display: block;
     font-size: 24px;
