adjust site and post style

--- a/app/views/sites/editPost.scala.html
+++ b/app/views/sites/editPost.scala.html
@@ -122,7 +122,7 @@ title =  "食美特，不一样的生活"
 
 
 
-                <div class="form-row mt10 clearfix">
+                <div class="form-row clearfix">
                     <label>&nbsp;</label>
                     <input type="submit" class="bbl-btn submit" value="发布帖子">
                     <input type="submit" class="bgr-btn submit" value="保存草稿">
