--- a/public/assets/css/template/siteEdit.css
+++ b/public/assets/css/template/siteEdit.css
@@ -241,6 +241,7 @@ text-decoration: none;
 }
 .post-edit-left .post-edit-content{
       background-color: #fff;
+    margin-bottom: 20px;
 }
 
 .post-edit-left h2{
