--- a/public/assets/js/ueditor/themes/default/css/ueditor.css
+++ b/public/assets/js/ueditor/themes/default/css/ueditor.css
@@ -122,6 +122,7 @@ div.edui-box {
 
 .edui-default .edui-editor {
     /*border: 1px solid #ddd;*/
+    border-bottom: 1px solid #ddd;
     background-color: white;
     position: relative;
     overflow: visible;
