--- a/public/assets/js/ueditor/1.2.6.0/themes/default/css/ueditor.css
+++ b/public/assets/js/ueditor/1.2.6.0/themes/default/css/ueditor.css
@@ -334,15 +334,15 @@ div.edui-box {
     background-position: -116px -82px;
 }
 
-.edui-default .edui-for-emotion .edui-icon {
+.edui-default .edui-for-horizontal .edui-icon {
     background-position: -246px -2px;
 }
 
-.edui-default .edui-for-emotion .edui-state-hover .edui-icon {
+.edui-default .edui-for-horizontal .edui-state-hover .edui-icon {
     background-position: -246px -42px;
 }
 
-.edui-default .edui-for-emotion .edui-state-active .edui-icon, .edui-default .edui-for-emotion .edui-state-checked .edui-icon {
+.edui-default .edui-for-horizontal .edui-state-active .edui-icon, .edui-default .edui-for-horizontal .edui-state-checked .edui-icon {
     background-position: -246px -82px;
 }
 
