--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -2,17 +2,14 @@
 flashes:List[models.advert.Advert],
 hots:List[models.advert.Advert],
 meishi:List[models.advert.Advert],
-techan:List[models.advert.Advert],
+shicai:List[models.advert.Advert],
 jujia:List[models.advert.Advert],
-haowanyi:List[models.advert.Advert],
 meishiTags:models.advert.Advert,
-techanTags:models.advert.Advert,
+shicaiTags:models.advert.Advert,
 jujiaTags:models.advert.Advert,
-haowanyiTags:models.advert.Advert,
 meishiBrands:List[models.advert.Advert],
 teseBrands:List[models.advert.Advert],
-bottom:models.advert.Advert
-
+adverts:List[models.advert.Advert]
 )
 @views.html.template(
 user,
@@ -82,7 +79,7 @@ nav="index"
         <dl class="first">
             <dt>
             <div class="title-wrap clearfix">
-                <h2 class="title clearfix"><a href='@controllers.routes.Pages.faxian(1,0,1,1)' target="_blank">美食</a></h2>
+                <h2 class="title clearfix"><a href='@controllers.routes.Pages.faxian(1,0,1,1)' target="_blank">零食</a></h2>
                 <div class="title-desc"><a href='@controllers.routes.Pages.faxian(1,0,1,1)' target="_blank">&nbsp;•&nbsp;每日精选</a></div>
             </div>
             <div class="tag-wrap clearfix">
@@ -168,10 +165,10 @@ nav="index"
                 <div class="title-desc"><a href='@controllers.routes.Pages.faxian(2,0,1,1)' target="_blank">&nbsp;•&nbsp;每日精选</a></div>
             </div>
             <div class="tag-wrap clearfix">
-                @Html(techanTags.content.getOrElse(""))
+                @Html(shicaiTags.content.getOrElse(""))
             </div>
             </dt>
-            @for((advert,i)<-techan.view.zipWithIndex){
+            @for((advert,i)<-shicai.view.zipWithIndex){
             @if(i==0){
             <dd>
                 <a href="@advert.link" title="@advert.title" target="_blank">
@@ -184,7 +181,7 @@ nav="index"
         </dl>
 
         <dl class="second">
-            @for((advert,i)<-techan.view.zipWithIndex){
+            @for((advert,i)<-shicai.view.zipWithIndex){
             @if(i>0 && i<4){
             <dd>
                 <a href="@advert.link" title="@advert.title" target="_blank">
@@ -196,7 +193,7 @@ nav="index"
             }
         </dl>
         <dl class="third">
-            @for((advert,i)<-techan.view.zipWithIndex){
+            @for((advert,i)<-shicai.view.zipWithIndex){
             @if(i==4){
             <dd>
                 <a href="@advert.link" title="@advert.title" target="_blank">
@@ -217,7 +214,7 @@ nav="index"
         </dl>
 
         <dl class="fourth last">
-            @for((advert,i)<-techan.view.zipWithIndex){
+            @for((advert,i)<-shicai.view.zipWithIndex){
             @if(i>=7){
 
             <dd>
@@ -321,11 +318,79 @@ nav="index"
 </div>
 <!-- 居家  end -->
 
+<!-- 小镇 start -->
+<div class="category-main clearfix">
+    <div class="category">
+        <dl class="first">
+            <dt>
+            <div class="title-wrap clearfix">
+                <h2 class="title clearfix"><a href="/faxian/3" target="_blank">小镇</a></h2>
+                <div class="title-desc"><a href="/faxian/3" target="_blank">&nbsp;•&nbsp;人杰地灵</a></div>
+            </div>
+            <div class="tag-wrap clearfix">
+                <a href="/theme/50" target="_blank" class="special">那些年我们一起喜欢的2货</a>      <a href="/theme/43" target="_blank">“居里夫人”成长记</a>           <a href="/theme/25" target="_blank">我爱我家</a><a href="/theme/27" target="_blank">乐活族</a><a href="/theme/47" target="_blank">一辈子的情怀</a> <a href="/theme/30" target="_blank" class="special">办公桌上的那一抹绿</a>   <a href="/miss?cid=3" target="_blank"><span class="tag-txt">更多</span><span class="ico-triangle" style="font-style: italic;"></span></a>
+            </div>
+            </dt>
 
+        </dl>
+
+        <dl class="second">
+            <dd>
+                <a href="http://smeite.com/find/居家/置物架" title="置物架" target="_blank">
+                    <img src="/images/adv/20130327-jujia-2.jpg" width="150" height="150" alt="置物架">
+                </a>
+                <div class="desc"><a href="http://smeite.com/find/居家/置物架" title="置物架" target="_blank"> <span>置物架</span> </a> </div>
+            </dd>
+            <dd>
+                <a href="http://smeite.com/find/居家/密封罐" title="密封罐" target="_blank">
+                    <img src="/images/adv/20130327-jujia-3.jpg" width="150" height="150" alt="密封罐">
+                </a>
+                <div class="desc"><a href="http://smeite.com/find/居家/密封罐" title="密封罐" target="_blank"> <span>密封罐</span> </a> </div>
+            </dd>
+        </dl>
+        <dl class="third">
+            <dd>
+                <a href="http://smeite.com/find/居家/马克杯" title="马克杯" target="_blank">
+                    <img src="/images/adv/20130327-jujia-5.jpg" width="310" height="310" alt="马克杯">
+                </a>
+                <div class="desc"><a href="http://smeite.com/find/居家/马克杯" title="马克杯" target="_blank"> <span>马克杯</span> </a> </div>
+            </dd>
+
+
+        </dl>
+        <dl class="fourth last">
+            <dd>
+                <a href="http://smeite.com/find/居家/茶具" title="茶具" target="_blank">
+                    <img src="/images/adv/20130327-jujia-8.jpg" width="220" height="150" alt="茶具">
+                </a>
+                <div class="desc"><a href="http://smeite.com/find/居家/茶具" title="茶具" target="_blank"> <span>茶具</span></a></div>
+            </dd>
+            <dd>
+                <a href="http://smeite.com/find/居家/绿植" title="绿植" target="_blank">
+                    <img src="/images/adv/20130327-jujia-9.jpg" width="220" height="150" alt="绿植">
+                </a>
+                <div class="desc"><a href="http://smeite.com/find/居家/绿植" title="绿植" target="_blank"> <span>绿植</span></a></div>
+            </dd>
+
+        </dl>
+
+    </div>
+
+
+
+</div>
+<!-- 小镇 end -->
 
 <!-- 底部广告-->
-<div class="adv">
-    <a href="@bottom.link"><img src="@bottom.pic" alt="@bottom.title"></a>
+<div class="adverts" id="J_adverts" data-effect="fade" data-easing="easeOutStrong">
+   <ol class="ui-switchable-content" data-role="content">
+       @for(advert <- adverts){
+     <li>
+         <a href="@advert.link"><img src="@advert.pic" alt="@advert.title"></a>
+     </li>
+       }
+   </ol>
+
 </div>
 
 
