adjust some css

--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -382,8 +382,8 @@ nav="index"
 <!-- 小镇 end -->
 
 <!-- 底部广告-->
-<div class="adverts" id="J_adverts" data-effect="fade" data-easing="easeOutStrong">
-   <ol class="ui-switchable-content" data-role="content">
+<div class="adverts" id="J_adverts">
+   <ol class="ui-switchable-content">
        @for(advert <- adverts){
      <li>
          <a href="@advert.link"><img src="@advert.pic" alt="@advert.title"></a>
