--- a/app/views/pages/themes.scala.html
+++ b/app/views/pages/themes.scala.html
@@ -3,9 +3,7 @@ user:Option[models.user.User],
 flashes:List[models.advert.Advert],
 meishiThemes:List[((Long,String,String,Int),List[String])],
 techanThemes:List[((Long,String,String,Int),List[String])],
-zibuThemes:List[((Long,String,String,Int),List[String])],
-jujiaThemes:List[((Long,String,String,Int),List[String])],
-haowanyiThemes:List[((Long,String,String,Int),List[String])]
+jujiaThemes:List[((Long,String,String,Int),List[String])]
 )
 @views.html.template(
 user,
@@ -43,7 +41,7 @@ title = " 美食街_食美特，爱美食爱生活"
             <li ></li>
         </ul>
     </div>
-    <!--kissy switchable  slide end-->
+    <!--  switchable  slide end-->
     <div class="bulletin r5 fr clearfix">
          <div class="bulletin-tips">
                <h3 class="mt15 mb10">用快乐的心情</h3>
@@ -56,7 +54,7 @@ title = " 美食街_食美特，爱美食爱生活"
 
 
     </div>
-    <!--最近热门的好玩意儿 end-->
+
 
 </div>
 
@@ -96,7 +94,7 @@ title = " 美食街_食美特，爱美食爱生活"
     </div>
 </div>
 
-    <!-- 特产主题推荐-->
+    <!-- 食材主题推荐-->
     <div class="category clearfix">
         <div class="hd clearfix">
             <h2 class="fl"><a href='@controllers.routes.Pages.gallery(1,1,1)'>特产</a></h2>
@@ -104,42 +102,6 @@ title = " 美食街_食美特，爱美食爱生活"
         </div>
         <div class="group clearfix">
             @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-techanThemes.view.zipWithIndex){
-            <div class="item @if((i+1)%4==0){last}">
-                <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
-                    @for((pic,i)<-pics.view.zipWithIndex){
-                    @if(i==0){
-                    <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
-                    }else{
-                    <img class="s-img" width="50" height="50" src='@(pic+"_60x60.jpg")' alt="@themeName">
-                    }
-                    }
-
-                </a>
-                <h3 class="ofh">
-                    <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
-                </h3>
-
-                <div class="info" >@themeIntro</div>
-                <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
-					<span class="mete pl15">
-
-                        <em class="J_LikeCount">@themeLoveNum</em> 人关注
-
-                    </span>
-            </div>
-            }
-        </div>
-    </div>
-
-
-    <!-- 滋补主题推荐-->
-    <div class="category clearfix">
-        <div class="hd clearfix">
-            <h2 class="fl"><a href='@controllers.routes.Pages.gallery(2,1,1)'>滋补</a></h2>
-            <a class="fr" href='@controllers.routes.Pages.gallery(2,1,1)'>更多&gt;&gt;</a>
-        </div>
-        <div class="group clearfix">
-            @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<- zibuThemes.view.zipWithIndex){
             <div class="item @if((i+1)%4==0){last}">
                 <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
                     @for((pic,i)<-pics.view.zipWithIndex){
@@ -202,40 +164,6 @@ title = " 美食街_食美特，爱美食爱生活"
         </div>
     </div>
 
-<!-- 好玩意主题推荐-->
-<div class="category clearfix">
-    <div class="hd clearfix">
-        <h2 class="fl"><a href='@controllers.routes.Pages.gallery(6,1,1)'>好玩意</a></h2>
-        <a class="fr" href='@controllers.routes.Pages.gallery(6,1,1)'>更多&gt;&gt;</a>
-    </div>
-    <div class="group clearfix">
-        @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-haowanyiThemes.view.zipWithIndex){
-        <div class="item @if((i+1)%4==0){last}">
-            <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
-                @for((pic,i)<-pics.view.zipWithIndex){
-                @if(i==0){
-                <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
-                }else{
-                <img class="s-img" width="50" height="50" src='@(pic+"_60x60.jpg")' alt="@themeName">
-                }
-                }
-
-            </a>
-            <h3 class="ofh">
-                <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
-            </h3>
-
-            <div class="info" >@themeIntro</div>
-            <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
-					<span class="mete pl15">
-
-                        <em class="J_LikeCount">@themeLoveNum</em> 人关注
-
-                    </span>
-        </div>
-        }
-    </div>
-</div>
 
 
 </div>
