--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -52,7 +52,7 @@
                 <li  class='@("on".when(nav == "居家"))'><a href='@controllers.routes.Pages.faxian(2,0,1,1)'>居家</a></li>
 
                 <li><span>-</span></li>
-                <li class='presell @("on".when(nav == "presell"))  '><a href="/presell">生鲜预售</a></li>
+                <li class='presell @("on".when(nav == "presell"))  '><a href="/presell">鲜生活</a></li>
                 <li class='worth @("on".when(nav == "worth"))  '><a href="/worth">今天值得买</a></li>
 
                 <li><span>-</span></li>
